- mayhem:
  - custom hotkey binding
  - image spoiler revealer
  - optional auto noko
  - fix options centering on Opera
  - fix append '#watch' only when auto watch is enabled
- aeosynth:
  - keep options dialog at constant size
  - drop firefox 3.6 support (again...)
  - comment out tineye
  - trying to post during cooldown will enable auto-post
  - fix errors w/ noscript

2.14.0
- mayhem:
  - firstrun dialog
  - fix backlinking future posts
  - fix op non-backlinking
  - fix thread expansion on /t/
  - fix sage cooldown
  - fix extra link area around images
  - fix persistent qr
- aeosynth:
  - reply navigation
  - fix time formatting of xhr posts
  - fix %P time formatting

2.13.0
- mayhem:
  - fix various bugs
  - keybinds: 0: actually refresh page 0
  - auto posting
  - add google sauce
- arbitrary time formatting
- rewrite options dialog, lightboxing
- various fixes

2.12.0
- revert the status bar blocking changes
- add a 5px padding-bottom to #qp

2.11.4
- fix another quoting bug

2.11.3
- really fix quoting

2.11.2
- fix quoting stuff

2.11.1
- work on firefox < 6.0

2.11.0
mayhem:
  - fix quote highlighting
- block status bar when hovering quotes / images (may break image leeching)

2.10.0
mayhem:
  space between backlinks (to prevent them from spilling out of the page)
  thread stats: fix wrong selector id when image limit reached
  fix localized time + inlined quotes
- fix edge hovering (flip to left of mouse @ right screen edge)
- work on closed threads (some stickies)
- op backlinking option
- quote highlighting option
- (maybe) work on fx3

2.9.0
- mayhem:
  better placement of inlined backquotes
  fix qr in expanded threads
  inline quote fixes
  fetch name, mail and pass in cookies at each qr opening
  highlight quoted post during quote preview
  add ' (OP)' to op quotes
  am/pm localized time
  give visual feedback on which quote has been inlined
  fix paypal link
  cooldown: alert only when posting from normal post form
  fix cooldown